# Synth

./: CMakeLists.txt  Readme.md
src/: MainComponent.cpp  MainComponent.h  SynthAudioSource.cpp  SynthAudioSource.h  main.cpp
